[package]
name = "siamese"
version = "0.0.1"
edition = "2021"
description = "siamese - a rule engine built with rust."
license = "MIT"
documentation = "https://siamese.aicmu.ac.cn/"
homepage = "https://siamese.aicmu.ac.cn/"
repository = "https://github.com/retrofor/Siamese"
authors = ["HsiangNianian"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
evalexpr = "12.0.2"
pyo3 = { version = "0.19.2", features = ["abi3-py39"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3.36", features = ["formatting", "macros", "local-offset"] }
